# archived-optf-has

./: .gitignore  .gitreview  .readthedocs.yaml  INFO.yaml  LICENSE.txt  aai.cer  aai.key  aai_bundle.pem  aai_cert.cer  aai_key.key  api_paste.ini  build-dockers.sh  conductor.conf  groups  pom.xml  preload_secrets.yaml  project.config  push-dockers.sh  remove-images.sh  reviewers.config  run-dockers.sh  sonar.sh  stop-dockers.sh  version.properties
conductor/: .coveragerc  .testr.conf  README.rst  assembly.xml  pom.xml  pylintrc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
conductor/conductor/: README.md  README.rst  __init__.py  clean.sh  i18n.py  messaging.py  middleware.py  opts.py  service.py  setup.cfg  setup.py  version.py
conductor/conductor/api/: app.py  app.wsgi  hooks.py  latency_dataloader.py  middleware.py  rbac.py
conductor/conductor/api/adapters/: __init__.py
conductor/conductor/api/controllers/: __init__.py  errors.py  root.py  validator.py
conductor/conductor/cmd/: controller.py  data.py  encryptionUtil.py  reservation.py  solver.py
conductor/conductor/common/: __init__.py  classes.py  config_loader.py  db_backend.py  prometheus_metrics.py  rest.py  sms.py  threshold.py
conductor/conductor/common/etcd/: api.py  utils.py
conductor/conductor/common/models/: __init__.py  country_latency.py  group_rules.py  (+6 more)
conductor/conductor/conf/: File_system.py  adiod_controller.py  defaults.py  file_system.py  inventory_provider.py  service_controller.py  vim_controller.py
conductor/conductor/controller/: __init__.py  generic_objective_translator.py  rpc.py  service.py  translator.py  translator_svc.py  translator_utils.py  translator_v2.py
conductor/conductor/data/: __init__.py  hpa_utils.py  service.py
conductor/conductor/reservation/: __init__.py  service.py
conductor/conductor/solver/: __init__.py  service.py
conductor/conductor/tests/: testing-overview.txt
conductor/doc/api/: README.md
conductor/doc/distribution/: README.md
conductor/doc/examples/: README.md
conductor/doc/glossary/: README.md
conductor/doc/template/: README.md
conductor/docker/: Dockerfile  app.wsgi  build-dockers.sh  conductor.conf  push-dockers.sh  run-dockers.sh  stop-dockers.sh
conductor/docker/api/: Dockerfile
conductor/docker/assembly/: has-files.xml
conductor/docker/controller/: Dockerfile
conductor/docker/data/: Dockerfile
conductor/docker/reservation/: Dockerfile
conductor/docker/solver/: Dockerfile
conductor/etc/conductor/: api_paste.ini  conductor-config-generator.conf  log.conf  policy.json  rootwrap.conf
conductor/examples/apache2/: conductor.conf
conductor/examples/nginx/: conductor-api.upstart.conf  nginx.conf
conductor/tools/: README.md  pretty_tox.sh
conductor/tools/postman_collection/: HPA-AAI-Mandatory.postman_collection.json  HPA-AAI.postman_collection.json  HPA-Conductor-Mandatory.postman_collection.json  HPA-Conductor.postman_collection.json  MultiCloud.postman_collection.json
(+375 files in other folders)
