# -*- encoding: utf-8 -*-
# -------------------------------------------------------------------------
#   Copyright (c) 2015-2017 AT&T Intellectual Property
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#
# -------------------------------------------------------------------------
#

[metadata]
name = of-has
summary = ONAP Homing Service
description-file = README.rst
author = AT&T
author-email = snarayanan@research.att.com
home-page = https://wiki.onap.org/pages/viewpage.action?pageId=16005528
classifier =
    Development Status :: 4 - Beta
    Environment :: ONAP
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved  :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
keywords =
    onap
    homing
    conductor

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    conductor
data_files =
    etc/conductor = etc/conductor/*
#    conductor_integrationtests
#scripts =
#    bin/conductor-db-setup

[entry_points]
wsgi_scripts =
    conductor-api = conductor.api.app:build_wsgi_app

console_scripts =
    conductor-controller = conductor.cmd.controller:main
    conductor-data = conductor.cmd.data:main
    conductor-solver = conductor.cmd.solver:main
    conductor-reservation = conductor.cmd.reservation:main
    cipher-util = conductor.cmd.encryptionUtil:main

conductor.inventory_provider.plugin =
    aai = conductor.data.plugins.inventory_provider.aai:AAI
    generator = conductor.data.plugins.inventory_provider.generator:Generator

conductor.vim_controller.plugin =
    multicloud = conductor.data.plugins.vim_controller.multicloud:MULTICLOUD

conductor.service_controller.plugin =
    sdnc = conductor.data.plugins.service_controller.sdnc:SDNC

oslo.config.opts =
    conductor = conductor.opts:list_opts

oslo.config.opts.defaults =
    conductor = conductor.conf.defaults:set_cors_middleware_defaults

#tempest.test_plugins =
#    conductor_tests = conductor_integrationtests.plugin:ConductorTempestPlugin

#[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[pbr]
warnerrors = true
autodoc_index_modules = true

